--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.11.1",
     "jest-expo": "25.0.0",
-    "react-test-renderer": "16.2.0"
+    "react-native-scripts": "1.11.1",
+    "react-test-renderer": "16.2.0",
+    "redux-logger": "^3.0.6"
   },
   "license": "",
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
