--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "connect-ensure-login": "^0.1.1",
     "expo": "^25.0.0",
+    "firebase": "^4.10.1",
+    "firebaseui": "^2.6.2",
     "native-base": "^2.3.9",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.1",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-firebase": "^3.2.7",
     "react-native-sound": "^0.10.6",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.27",
